--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "auth-ms"]
 	path = auth-ms
 	url = https://github.com/Proyect-Gym-Nest-Microservices/Auth-microservice.git
+[submodule "client-gateway"]
+	path = client-gateway
+	url = https://github.com/Proyect-Gym-Nest-Microservices/client-gateway.git
