--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,18 @@ services:
       - PORT=3005
       - NATS_SERVERS=nats://nats-server:4222
       - DATABASE_URL=${AUTH_DATABASE_URL}
-      - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET_ACCESS=${JWT_SECRET_ACCESS}
+      - JWT_SECRET_REFRESH=${JWT_SECRET_REFRESH}
+  
+  user-ms:
+    build: ./user-ms
+    volumes:
+      - ./user-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3004
+      - NATS_SERVERS=nats://nats-server:4222
+      - DATABASE_URL=${USER_DATABASE_URL}
 
   client-gateway:
     build: ./client-gateway
@@ -27,3 +38,5 @@ services:
     environment:
       - PORT=3002
       - NATS_SERVERS=nats://nats-server:4222
+      - NODE_ENV=${NODE_ENV}
+
