--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - DATABASE_URL=${AUTH_DATABASE_URL}
       - JWT_SECRET_ACCESS=${JWT_SECRET_ACCESS}
       - JWT_SECRET_REFRESH=${JWT_SECRET_REFRESH}
+      - JWT_SECRET_RESET_PASSWORD=${JWT_SECRET_RESET_PASSWORD}
   
   user-ms:
     build: ./user-ms
@@ -39,4 +40,15 @@ services:
       - PORT=3002
       - NATS_SERVERS=nats://nats-server:4222
       - NODE_ENV=${NODE_ENV}
+  
+  notification-ms:
+    build: ./notification-ms
+    volumes:
+      - ./notification-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - NATS_SERVERS=nats://nats-server:4222
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_FROM_EMAIL=${SENDGRID_FROM_EMAIL}
+      - SENDGRID_FROM_NAME=${SENDGRID_FROM_NAME}
 
