add new microservices

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,17 @@
 # Client-Gateway
-# development | production
-NODE_ENV=
+NODE_ENV=development
 CLIENT_GATEWAY_PORT=
 
 # User-Microservice
 USER_DATABASE_URL=
-
 # Auth-Microservice
 AUTH_DATABASE_URL=
 JWT_SECRET_ACCESS=
 JWT_SECRET_REFRESH=
+JWT_SECRET_RESET_PASSWORD=
+
+
+# Notification-Microservice
+SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=
+SENDGRID_FROM_NAME=
