--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,20 @@ services:
     ports:
       - 8222:8222
   
+  nutrition-ms:
+    depends_on:
+      - nats-server
+    build: ./nutrition-ms
+    volumes:
+      - ./nutrition-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3007
+      - NATS_SERVERS=${NATS_SERVERS}
+      - DATABASE_URL=${NUTRITION_DATABASE_URL}
+
+
+
   auth-ms:
     depends_on:
       - nats-server
@@ -45,6 +59,7 @@ services:
       - PORT=3006
       - NATS_SERVERS=${NATS_SERVERS}
       - DATABASE_URL=${TRAINING_DATABASE_URL}
+
 
 
 
