--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,20 @@ services:
       - NATS_SERVERS=${NATS_SERVERS}
       - DATABASE_URL=${NUTRITION_DATABASE_URL}
 
+  analytics-ms:
+    depends_on:
+      - nats-server
+    build: ./analytics-ms
+    volumes:
+      - ./analytics-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3008
+      - NATS_SERVERS=${NATS_SERVERS}
+      - DATABASE_URL=${ANALYTIC_DATABASE_URL}
+
+    
+
 
 
   auth-ms:
