--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,17 @@ services:
     ports:
       - 8222:8222
   
-  #nutrition-ms:
-  #  depends_on:
-  #    - nats-server
-  #  build: ./nutrition-ms
-  #  volumes:
-  #    - ./nutrition-ms/src:/usr/src/app/src
-  #  command: npm run start:dev
-  #  environment:
-  #    - PORT=3007
-  #    - NATS_SERVERS=${NATS_SERVERS}
-  #    - DATABASE_URL=${NUTRITION_DATABASE_URL}
+  nutrition-ms:
+    depends_on:
+      - nats-server
+    build: ./nutrition-ms
+    volumes:
+      - ./nutrition-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3007
+      - NATS_SERVERS=${NATS_SERVERS}
+      - DATABASE_URL=${NUTRITION_DATABASE_URL}
 
   analytics-ms:
     depends_on:
@@ -89,18 +89,18 @@ services:
       - NATS_SERVERS=${NATS_SERVERS}
       - NODE_ENV=${NODE_ENV}
   
-  #notification-ms:
-  #  depends_on:
-  #    - nats-server
-  #  build: ./notification-ms
-  #  volumes:
-  #    - ./notification-ms/src:/usr/src/app/src
-  #  command: npm run start:dev
-  #  environment:
-  #    - NATS_SERVERS=${NATS_SERVERS}
-  #    - SENDGRID_API_KEY=${SENDGRID_API_KEY}
-  #    - SENDGRID_FROM_EMAIL=${SENDGRID_FROM_EMAIL}
-  #    - SENDGRID_FROM_NAME=${SENDGRID_FROM_NAME}
+  notification-ms:
+    depends_on:
+      - nats-server
+    build: ./notification-ms
+    volumes:
+      - ./notification-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - NATS_SERVERS=${NATS_SERVERS}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_FROM_EMAIL=${SENDGRID_FROM_EMAIL}
+      - SENDGRID_FROM_NAME=${SENDGRID_FROM_NAME}
 
   training-db:
     image: postgres:16.2
