--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,33 +58,34 @@ services:
   #    - PORT=3008
   #    - NATS_SERVERS=${NATS_SERVERS}
   #    - DATABASE_URL=${ANALYTIC_DATABASE_URL}
+  #    - DATABASE_URL_TEST=${ANALYTIC_DATABASE_URL_TEST}
 
 
-  training-ms:
-    depends_on:
-      - nats-server
-      - training-db
-    build: ./training-ms
-    volumes:
-      - ./training-ms/src:/usr/src/app/src
-    command: npm run start:dev
-    environment:
-      - PORT=3006
-      - NATS_SERVERS=${NATS_SERVERS}
-      - DATABASE_URL=${TRAINING_DATABASE_URL}
-      - DATABASE_URL_TEST=${TRAINING_DATABASE_URL_TEST}
+  #training-ms:
+  #  depends_on:
+  #    - nats-server
+  #    - training-db
+  #  build: ./training-ms
+  #  volumes:
+  #    - ./training-ms/src:/usr/src/app/src
+  #  command: npm run start:dev
+  #  environment:
+  #    - PORT=3006
+  #    - NATS_SERVERS=${NATS_SERVERS}
+  #    - DATABASE_URL=${TRAINING_DATABASE_URL}
+  #    - DATABASE_URL_TEST=${TRAINING_DATABASE_URL_TEST}
 
-  training-db:
-    image: postgres:16.2
-    #restart: always
-    volumes:
-      - ./training-ms/postgres:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+  #training-db:
+  #  image: postgres:16.2
+  #  #restart: always
+  #  volumes:
+  #    - ./training-ms/postgres:/var/lib/postgresql/data
+  #  ports:
+  #    - 5432:5432
+  #  environment:
+  #    - POSTGRES_USER=${POSTGRES_USER}
+  #    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  #    - POSTGRES_DB=${POSTGRES_DB}
 
   client-gateway:
     depends_on:
@@ -100,18 +101,18 @@ services:
       - NATS_SERVERS=${NATS_SERVERS}
       - NODE_ENV=${NODE_ENV}
   
-  #notification-ms:
-  #  depends_on:
-  #    - nats-server
-  #  build: ./notification-ms
-  #  volumes:
-  #    - ./notification-ms/src:/usr/src/app/src
-  #  command: npm run start:dev
-  #  environment:
-  #    - NATS_SERVERS=${NATS_SERVERS}
-  #    - SENDGRID_API_KEY=${SENDGRID_API_KEY}
-  #    - SENDGRID_FROM_EMAIL=${SENDGRID_FROM_EMAIL}
-  #    - SENDGRID_FROM_NAME=${SENDGRID_FROM_NAME}
+  notification-ms:
+    depends_on:
+      - nats-server
+    build: ./notification-ms
+    volumes:
+      - ./notification-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - NATS_SERVERS=${NATS_SERVERS}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_FROM_EMAIL=${SENDGRID_FROM_EMAIL}
+      - SENDGRID_FROM_NAME=${SENDGRID_FROM_NAME}
 
 
 
